@@ -1,25 +1,25 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="../js/ext/resources/css/ext-all.css" />
-<script type="text/javascript" src="../js/ext/adapter/ext/ext-base.js"></script>
-<script type="text/javascript" src="../js/ext/ext-all.js"></script>
+<link rel="stylesheet" type="text/css" href="./www/js/ext/resources/css/ext-all.css" />
+<script type="text/javascript" src="./www/js/ext/adapter/ext/ext-base.js"></script>
+<script type="text/javascript" src="./www/js/ext/ext-all.js"></script>
 
-<link rel="stylesheet" type="text/css" href="../css/prism.css" />
-<link rel="stylesheet" type="text/css" href="../css/fileuploadfield.css" />
+<link rel="stylesheet" type="text/css" href="./www/css/prism.css" />
+<link rel="stylesheet" type="text/css" href="./www/css/fileuploadfield.css" />
 
-<script type="text/javascript" src="../js/prism-config.js"></script>
-<script type="text/javascript" src="../js/prism.js"></script>
-<script type="text/javascript" src="../js/prism-editor.js"></script>
-<script type="text/javascript" src="../js/prism-autoassign.js"></script>
-<script type="text/javascript" src="../js/prism-region.js"></script>
-<script type="text/javascript" src="../js/prism-grid.js"></script>
-<script type="text/javascript" src="../js/prism-plugins.js"></script>
-<script type="text/javascript" src="../js/ext-ux-fileuploadfield.js"></script>
+<script type="text/javascript" src="./www/js/prism-config.js"></script>
+<script type="text/javascript" src="./www/js/prism.js"></script>
+<script type="text/javascript" src="./www/js/prism-editor.js"></script>
+<script type="text/javascript" src="./www/js/prism-autoassign.js"></script>
+<script type="text/javascript" src="./www/js/prism-region.js"></script>
+<script type="text/javascript" src="./www/js/prism-grid.js"></script>
+<script type="text/javascript" src="./www/js/prism-plugins.js"></script>
+<script type="text/javascript" src="./www/js/ext-ux-fileuploadfield.js"></script>
 
 <script language="javascript">
 Ext.onReady(function() {
-  Ext.BLANK_IMAGE_URL = '../js/ext/resources/images/default/s.gif';
+  Ext.BLANK_IMAGE_URL = './www/js/ext/resources/images/default/s.gif';
   PRISM.init();
 });
 </script>
